[package]
name = "chip8sys"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A CHIP-8 emulator library"
homepage = "https://github.com/nebulous-code/chip-8"
repository = "https://github.com/nebulous-code/chip-8"
readme = "README.md"
keywords = ["CHIP-8", "emulator", "retro_computer"]
categories = ["emulators"]

[dependencies]
serde = "*"

# random
getrandom = { version = "0.3.3", default-features = false, features = ["wasm_js"] }

[lib]
name = "chip8sys"
path = "src/lib.rs"
